versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Standard.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalStandard
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function StandardDefaultConst() &
      bind(C, name='StandardDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function StandardDefaultConst

!! Create, default
function StandardDefault() &
      bind(C, name='StandardDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function StandardDefault

!! Create, general, const
function StandardCreateConst( &
   Double &
) &
      bind(C, name='StandardCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: Double
   type(c_ptr) :: handle
end function StandardCreateConst

!! Create, general
function StandardCreate( &
   Double &
) &
      bind(C, name='StandardCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: Double
   type(c_ptr) :: handle
end function StandardCreate

!! Assign
subroutine StandardAssign(handleLHS, handleRHS) &
      bind(C, name='StandardAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine StandardAssign

!! Delete
subroutine StandardDelete(handle) &
      bind(C, name='StandardDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine StandardDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function StandardRead(handle, filename, filenameSize) &
      bind(C, name='StandardRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function StandardRead

!! Write to file
function StandardWrite(handle, filename, filenameSize) &
      bind(C, name='StandardWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function StandardWrite

!! Print to standard output, in our prettyprinting format
function StandardPrint(handle) &
      bind(C, name='StandardPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function StandardPrint

!! Print to standard output, as XML
function StandardPrintXML(handle) &
      bind(C, name='StandardPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function StandardPrintXML

!! Print to standard output, as JSON
function StandardPrintJSON(handle) &
      bind(C, name='StandardPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function StandardPrintJSON


!! -----------------------------------------------------------------------------
!! Child: Double
!! -----------------------------------------------------------------------------

!! Has
function StandardDoubleHas(handle) &
      bind(C, name='StandardDoubleHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function StandardDoubleHas

!! Get, const
function StandardDoubleGetConst(handle) &
      bind(C, name='StandardDoubleGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function StandardDoubleGetConst

!! Get
function StandardDoubleGet(handle) &
      bind(C, name='StandardDoubleGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function StandardDoubleGet

!! Set
subroutine StandardDoubleSet(handle, fieldHandle) &
      bind(C, name='StandardDoubleSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine StandardDoubleSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalStandard
